feat: create endpoint to get account by id
